--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/react-wrapper": "^1.1.35",
+    "@react-google-maps/api": "^2.13.1",
     "axios": "^1.1.3",
     "firebase": "^9.9.3",
     "js-cookie": "^3.0.1",
     "modules": "^0.4.0",
+    "moment": "^2.29.4",
     "next": "12.2.3",
     "node": "^18.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-moment": "^1.1.2",
     "react-places-autocomplete": "^7.3.0",
     "react-spinners": "^0.13.4",
     "react-toastify": "^9.0.8"
