--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@googlemaps/react-wrapper": "^1.1.35",
+    "@ramonak/react-progress-bar": "^5.0.3",
     "@react-google-maps/api": "^2.13.1",
     "axios": "^1.1.3",
     "firebase": "^9.9.3",
     "js-cookie": "^3.0.1",
     "modules": "^0.4.0",
     "moment": "^2.29.4",
+    "multiselect-react-dropdown": "^2.0.25",
     "next": "12.2.3",
     "node": "^18.7.0",
     "react": "18.2.0",
