--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@googlemaps/react-wrapper": "^1.1.35",
     "@ramonak/react-progress-bar": "^5.0.3",
     "@react-google-maps/api": "^2.13.1",
+    "apexcharts": "^3.36.3",
     "axios": "^1.1.3",
     "firebase": "^9.9.3",
     "js-cookie": "^3.0.1",
@@ -21,6 +22,7 @@
     "next": "12.2.3",
     "node": "^18.7.0",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
     "react-moment": "^1.1.2",
     "react-places-autocomplete": "^7.3.0",
