--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-google-maps/api": "^2.13.1",
     "apexcharts": "^3.36.3",
     "axios": "^1.1.3",
+    "dayjs": "^1.11.7",
     "firebase": "^9.9.3",
     "js-cookie": "^3.0.1",
     "modules": "^0.4.0",
